# ml-course-hse

./: .gitignore  main.py  pyproject.toml
2024-fall/homework-practice/: homework_practice_04_linclass.ipynb
2024-fall/homework-practice/homework-practice-01-tabular/: homework-practice-01-pandas.ipynb  homework-practice-01-polars.ipynb
2024-fall/homework-practice/homework-practice-03-gd/: descents.py  homework-practice-03-gd.ipynb  linear_regression.py
