[project]
name = "ml-course-hse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.19.6",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "polars>=1.29.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "xlsx2csv>=0.8.4",
]
